--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Finger+Paint&display=swap" rel="stylesheet">
     <title>Erika Williams</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>hello world!</h1>
     <script src="script.js"></script>
+    <img src="./images/EWinNZ.jpg" alt="Erika in New Zealand">
+    <h2>- Erika Williams</h2>
 </body>
 </html>
